# GOAT-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
GOATEngine/: .gitmodules  CMakeLists.txt  Engine.cpp  Engine.hpp
GOATEngine/src/: GoatEngine.hpp
GOATEngine/src/components/: GameObject.cpp  GameObject.hpp  Point.cpp  Point.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp
GOATEngine/src/components/render/: Sprite.cpp  Sprite.hpp
GOATEngine/src/core/: Application.cpp  Application.hpp  Base.hpp  Engine.cpp  Engine.hpp  GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.hpp  System.hpp
GOATEngine/src/managers/: SceneManager.cpp  SceneManager.hpp  TextureManager.cpp  TextureManager.hpp
GOATEngine/src/resources/: Texture.hpp
GOATEngine/src/systems/: RenderingSystem.cpp  RenderingSystem.hpp
GOATEngine/src/systems/apis/: RendererApi.cpp  RendererApi.hpp
GOATEngine/src/utils/: Globals.cpp
GOATEngine/testHeaders/: test.cpp  test.h
MountEverestimate/: CMakeLists.txt  main.cpp
MountEverestimate/src/: Game.cpp  Game.hpp
src/: CMakeLists.txt
src/DLLs/: box2d.lib
src/Engine/: Engine.cpp  Engine.hpp  NoCopyNoMove.hpp  SceneManager.cpp  SceneManager.hpp
src/Engine/API/: Camera.cpp  Camera.hpp  Canvas.cpp  Canvas.hpp  LayerGroup.cpp  LayerGroup.hpp  Scene.cpp  Scene.hpp
src/Engine/API/Database/: DataApi.cpp  DataApi.hpp  DataImpl.cpp  DataImpl.hpp
src/Engine/API/GameObjects/: Color.cpp  Color.hpp  GameObject.cpp  GameObject.hpp  Point.cpp  Point.hpp  Rectangle.cpp  Rectangle.hpp  Transform.cpp  Transform.hpp
src/Engine/Components/: Renderer.cpp  Renderer.hpp
src/Engine/Components/Libraries/: RendererHandler.cpp  RendererHandler.hpp
src/Engine/Resources/: Texture.hpp
src/Engine/Systems/: AudioSystem.cpp  AudioSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp  ScriptSystem.cpp  ScriptSystem.hpp  System.cpp  System.hpp
src/Engine/Systems/Apis/: AudioApi.cpp  AudioApi.hpp  DataApi.cpp  DataApi.hpp  PhysicsApi.cpp  PhysicsApi.hpp  RendererApi.cpp  RendererApi.hpp
src/Engine/Systems/SystemHelpers/: AnimatorHelper.cpp  AnimatorHelper.hpp  LuaHelper.cpp  LuaHelper.hpp
src/Engine/Tests/: AnimatorHelperTest.cpp  InputTest.cpp  SampleTest.cpp  _Test.cpp
src/Engine/Utilities/: Clock.cpp  Clock.hpp  Debug.cpp  Debug.hpp  EngineCalls.cpp  EngineCalls.hpp  Globals.cpp  Globals.hpp  Http.cpp  Http.hpp  Input.cpp  Input.hpp  InputRegistry.cpp  InputRegistry.hpp
src/Engine/Utilities/Http/: HttpClient.cpp  HttpClient.hpp
src/Engine/Utilities/Input/: InputRegistry.cpp  InputRegistry.hpp  KeyCode.hpp  MouseButton.hpp  PressState.hpp
src/Game/: Game.cpp  GameSceneManager.cpp  GameSceneManager.hpp  GameScenes.hpp  Keys.hpp  Layers.hpp  MountEverestimateLevelConstructor.cpp  MountEverestimateLevelConstructor.hpp
src/Game/Animators/: Animator_CoolGoat.cpp  Animator_CoolGoat.hpp  Animator_PlayerWalking.cpp  Animator_PlayerWalking.hpp  Animator_Trash.hpp
src/Game/AudioSources/Music/: Music_SmoothGroove.hpp
src/Game/AudioSources/Sounds/: Sound_Death.cpp  Sound_Death.hpp  Sound_Jump.hpp  Sound_Oof.hpp  Sound_Walk.cpp  Sound_Walk.hpp  Sound_WalkAlt.cpp  Sound_WalkAlt.hpp
src/Game/Behaviors/: AdditionalBehavior.hpp  EtappeBehavior.cpp  EtappeBehavior.hpp  EtappeMarkerBehavior.cpp  EtappeMarkerBehavior.hpp  FpsBehavior.cpp  FpsBehavior.hpp  GoatBehavior.hpp  HawkBehavior.cpp  HawkBehavior.hpp  PlayerBehavior.cpp  PlayerBehavior.hpp  QuitGameBehavior.cpp  SlabTileBehavior.cpp  SlabTileBehavior.hpp  SolidTileBehavior.cpp  SolidTileBehavior.hpp  SwitchSceneButtonBehavior.cpp  SwitchSceneButtonBehavior.hpp  TestGoatBehavior.hpp
src/Game/Behaviors/Buttons/: EtappeMarkerBehavior.cpp  QuitGameBehavior.hpp  SwitchSceneButtonBehavior.cpp  SwitchSceneButtonBehavior.hpp  ToggleDebugBehavior.cpp
src/Game/Behaviors/Characters/: GoatBehavior.cpp  GoatBehavior.hpp  HawkBehavior.hpp  PlayerBehavior.cpp  PlayerBehavior.hpp
src/Game/Behaviors/Scripts/: AdditionalGoatTestScript.cpp  AdditionalGoatTestScript.hpp  FpsScript.cpp  FpsScript.hpp  GoatTestScript.hpp  HawkScript.cpp  HawkScript.hpp  PlayerMovementScript.cpp  PlayerMovementScript.hpp  QuitGameScript.cpp  SlabTileScript.cpp  SlabTileScript.hpp  SwitchSceneButtonScript.cpp  SwitchSceneButtonScript.hpp  ThirdTestScript.cpp  ThirdTestScript.hpp
src/Game/Behaviors/Tiles/: SlabTileBehavior.cpp  SlabTileBehavior.hpp  SolidTileBehavior.cpp  SolidTileBehavior.hpp
src/Game/Behaviors/Utils/: CheatsBehavior.cpp  CheatsBehavior.hpp  EtappeBehavior.cpp  EtappeBehavior.hpp  FpsBehavior.cpp  FpsBehavior.hpp  GameStateBehavior.cpp  GameStateBehavior.hpp  LifeHeartBehavior.cpp  LifeHeartBehavior.hpp  PauseActivationBehavior.hpp  TimerBehavior.cpp  TimerBehavior.hpp  TimerLineBehavior.cpp  TimerLineBehavior.hpp
src/Game/Behaviors/WorldObjects/: HealthPickupBehavior.cpp  HealthPickupBehavior.hpp  VictoryFlagBehavior.cpp  VictoryFlagBehavior.hpp
src/Game/GameObjects/: ExampleGoat.cpp  ExampleGoat.hpp  Goat.cpp  Goat.hpp
src/Game/GameObjects/Characters/: Object_Player.cpp  Player.cpp  Player.hpp
src/Game/GameObjects/Enemies/: Goat.cpp  (+4 more)
src/Game/Helpers/: HighScoreKeeper.cpp  HighScoreKeeper.hpp  MountEverestimateLevelConstructor.cpp  MountEverestimateLevelConstructor.hpp
src/Game/LuaScripts/: test.lua
src/Game/Music/: Music_SmoothGroove.cpp  Music_SmoothGroove.hpp  Music_WoodWhistles.cpp  Music_WoodWhistles.hpp
src/Game/Scenes/: DefeatScene.cpp  DefeatScene.hpp  EtappeSelection.cpp  EtappeSelection.hpp  ExampleScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  ScoreboardMenuScene.cpp  ScoreboardMenuScene.hpp  SettingsMenuScene.cpp  SettingsMenuScene.hpp  VictoryScene.cpp  VictoryScene.hpp
src/Game/Scripts/: GoatTestScript.cpp  GoatTestScript.hpp
src/Game/Tests/: PlayerTest.cpp
src/Libraries/: catch.hpp
src/Libraries/Tessil/: ordered_hash.hpp  ordered_map.hpp  ordered_set.hpp
src/Tests/: AnimatorHelperTest.cpp  ClockTests.cpp  HttpTests.cpp  InputRegistryTests.cpp  ScriptSystemTests.cpp  _GlobalsTests.cpp  _Test.cpp
(+1054 files in other folders)
